@@ -1,12 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST pecl_http-1.5.2.tgz 168058 RMD160 ecbc203eb0f07fe60c1e4d79885d06cfd5090890 SHA1 7fca98dd9decc90bd20aac446d62ee7f503a0e43 SHA256 cd5341c19209a9d10aad8d43e9bf70cfa844bbfa128749b09f4c7f723f199513
+DIST pecl_http-1.5.4.tgz 168091 RMD160 e3698afac63d4a292ffc5a091cd09de9b08f40b5 SHA1 3f6794d09b8b7177a4ec55d87b22f64f4c1c2dc7 SHA256 7dcab683935616d25dba8e77edbd526a19f200ea3d3d84e09d9869abdb41f526
 EBUILD pecl-http-1.5.2.ebuild 659 RMD160 89e67095234d41c212492fa72ff97c5b368ce8fc SHA1 f267e93e54994d24e2045d1b03a65f10724eb021 SHA256 820db7c333699ec7623513d3b92d9263f1e4f3decc0a76d96101bc3dddb0ccc1
 MD5 5d4a1d2240ad5febd9dd88e150205414 pecl-http-1.5.2.ebuild 659
 RMD160 89e67095234d41c212492fa72ff97c5b368ce8fc pecl-http-1.5.2.ebuild 659
 SHA256 820db7c333699ec7623513d3b92d9263f1e4f3decc0a76d96101bc3dddb0ccc1 pecl-http-1.5.2.ebuild 659
-MISC ChangeLog 785 RMD160 a4130a9650d9211e9aa131b297a5dbd619b88865 SHA1 f860ef13191a93f806d0852b7133666d30971494 SHA256 126d8dedbcf3c9f948b75864980ff0bbcb6f9bd4339d9b0aa3307637dcf7bbd6
-MD5 41a45a3dc3969541ba57d74dd449dc5e ChangeLog 785
-RMD160 a4130a9650d9211e9aa131b297a5dbd619b88865 ChangeLog 785
-SHA256 126d8dedbcf3c9f948b75864980ff0bbcb6f9bd4339d9b0aa3307637dcf7bbd6 ChangeLog 785
+EBUILD pecl-http-1.5.4.ebuild 916 RMD160 8c747b1972a5de370cc360a0b86d1bba3a84eb4f SHA1 f78f8f532a4d9d6796c75f2ff4f5f3461b344e02 SHA256 e9ce867647839cc90e866ff9a44cdfedeeee5a6706ffbb2568527bc4ce30f039
+MD5 29fc5d8bb3b32086a7f02121da86ec4a pecl-http-1.5.4.ebuild 916
+RMD160 8c747b1972a5de370cc360a0b86d1bba3a84eb4f pecl-http-1.5.4.ebuild 916
+SHA256 e9ce867647839cc90e866ff9a44cdfedeeee5a6706ffbb2568527bc4ce30f039 pecl-http-1.5.4.ebuild 916
+MISC ChangeLog 1036 RMD160 af56f66990cd384aba78a042f9361393cf945516 SHA1 092a8c8c078c3877e9f650e8fc945595add38186 SHA256 3d8dbd1c716984b8dd2b5c85a8ce864b24afae2f321bf329aa47f8c429ea77f8
+MD5 86b7a1c71050dda5273c2a853148add7 ChangeLog 1036
+RMD160 af56f66990cd384aba78a042f9361393cf945516 ChangeLog 1036
+SHA256 3d8dbd1c716984b8dd2b5c85a8ce864b24afae2f321bf329aa47f8c429ea77f8 ChangeLog 1036
 MISC metadata.xml 157 RMD160 a98db3a086fae3c09a903dadbc05f60443ec4b1a SHA1 ddaa23cc35eb917bf8962b652442bebb1ce0f440 SHA256 54f8878ca0228e380abbaa4b529806b5533a6b9b51b3b16c0909e906586a91a1
 MD5 c58d07ca1c1235bbad9bccaec96fc062 metadata.xml 157
 RMD160 a98db3a086fae3c09a903dadbc05f60443ec4b1a metadata.xml 157
@@ -14,3 +22,13 @@ SHA256 54f8878ca0228e380abbaa4b529806b5533a6b9b51b3b16c0909e906586a91a1 metadata
 MD5 011bd8e320503806430c7c7ff258ca52 files/digest-pecl-http-1.5.2 238
 RMD160 b9cf954f5812338d9d57525e89385721ef7778e4 files/digest-pecl-http-1.5.2 238
 SHA256 f3f7d2948ea5341ca487c3eea9aa0d83c40e5951fe5cd3a5074d1ff3186de85b files/digest-pecl-http-1.5.2 238
+MD5 1abbc5f0b2060a309c01d4657c5e5f97 files/digest-pecl-http-1.5.4 238
+RMD160 fe07674d672272b7006bcc20ac3ae3943e257542 files/digest-pecl-http-1.5.4 238
+SHA256 4b1af9ba201230a2d5fcd0dc587439c5cf6359fd1bbd3013a44f056f13d15a99 files/digest-pecl-http-1.5.4 238
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.5 (GNU/Linux)
+
+iD8DBQFG0qP3z974XjDVpbkRAsayAKDJiGyzh8EVJLjSotHORVt/e9p2fACfT3lj
+Ag64+ESmI2WPyqA43OU8pp4=
+=RlLJ
+-----END PGP SIGNATURE-----
