@@ -1,0 +1,3 @@
+MD5 b2e5440d2d2ae8c260594d2230f0a6d2 pecl_http-1.5.4.tgz 168091
+RMD160 e3698afac63d4a292ffc5a091cd09de9b08f40b5 pecl_http-1.5.4.tgz 168091
+SHA256 7dcab683935616d25dba8e77edbd526a19f200ea3d3d84e09d9869abdb41f526 pecl_http-1.5.4.tgz 168091
